[project]
name = "pricing-oracle"
version = "0.1.0"
description = "Market intelligence for vehicle rental pricing in Thailand and Vietnam"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ownima", email = "dev@ownima.com"},
]
keywords = ["pricing", "market-intelligence", "vehicle-rental", "thailand", "vietnam", "a2a", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.21",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.14.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "cohere>=5.0.0",
    "telethon>=1.34.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "eth-account>=0.13.0",
    "rich>=13.0.0",
    "uagents>=0.20.0",
    "a2a-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
pricing-oracle = "pricing_oracle.cli:main"
pricing-oracle-api = "pricing_oracle.api.main:app"
pricing-oracle-uagent = "pricing_oracle.uagent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
